@@ -55,8 +55,11 @@ enum voikko_sentence_type voikko_next_sentence_start_ucs4(int handle,
 	int end_found = 0;
 	int end_dotword = 0;
 	while (token != TOKEN_NONE && textlen - slen > 0) {
+		int ignore_dot_saved = voikko_options.ignore_dot;
+		voikko_options.ignore_dot = 0;
 		token = voikko_next_token_ucs4(handle, text + slen,
 		                               textlen - slen, &tokenlen);
+		voikko_options.ignore_dot = ignore_dot_saved;
 		if (end_found) {
 			if (token != TOKEN_WHITESPACE) {
 				*sentencelen = slen;
